@@ -3,6 +3,8 @@ CHANGES IN VERSION 0.99.7
 * Integration of Ibex with immApex
 * Update Seurat object to v5
 * Update ```CoNGAfy()``` to function with all versions of Seurat
+* Updated ```quietBCRgenes()``` to used VariableFeatures() call
+
 
 CHANGES IN VERSION 0.99.6
 ------------------------
